--- a/mod2_solution/css/mod2_solution.css
+++ b/mod2_solution/css/mod2_solution.css
@@ -2,6 +2,8 @@
 
 *{
     box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif; 
+    
 }
 
 
@@ -9,6 +11,7 @@ h1{
     margin: auto;
     text-align: center;
     padding: 10px;
+    font-size: 150%;
 }
 
 h2{
@@ -20,6 +23,7 @@ h2{
     class: "col-lg-4 col-md-4 col-sm-4";
     align-content: right;
     padding: 10px;
+    font-size: 125%;
 }
 
 p {
